<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EmpAddNewJobFragment">

        <LinearLayout
            android:id="@+id/topPart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/upButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp"
                    app:tint="@color/theme"
                    android:src="@drawable/ic_up_button" />

                <TextView
                    android:id="@+id/add_new_job_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingVertical="10sp"
                    android:paddingEnd="35sp"
                    android:text="@string/add_new_job_title"
                    android:textAlignment="center"
                    android:textColor="@color/theme"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#EAEAEA" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingVertical="10dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@id/bottomPart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topPart">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/job_type_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/job_type_title"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/job_title_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/job_title_title"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/job_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rectangular_shape"
                    android:hint="@string/job_title_field"
                    android:inputType="text"
                    android:padding="15dp" />

                <TextView
                    android:id="@+id/jobTitle_errorMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="5dp"
                    android:text=""
                    android:textColor="#FF0000"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/role_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/role_title"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rectangular_shape">

                    <Spinner
                        android:id="@+id/role_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/specialization_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/specialization_title"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rectangular_shape">

                    <Spinner
                        android:id="@+id/specialization_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/yearOfExp_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/yearOfExp_title"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rectangular_shape">

                    <Spinner
                        android:id="@+id/yearOfExp_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/job_desc_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/job_desc_title"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/job_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rectangular_shape"
                    android:hint="@string/job_desc_field"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:padding="15dp" />

                <TextView
                    android:id="@+id/jobDesc_errorMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="5dp"
                    android:text=""
                    android:textColor="#FF0000"
                    android:visibility="gone" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginVertical="20dp"
                    android:background="#BEBEBE" />

                <TextView
                    android:id="@+id/work_location_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/work_location_title"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/working_state_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/working_state_title"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/rectangular_shape">

                    <Spinner
                        android:id="@+id/state_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginVertical="20dp"
                    android:background="#BEBEBE" />

                <TextView
                    android:id="@+id/monthly_salary_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/monthly_salary_title"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/min_salary_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/min_salary_title"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/min_salary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rectangular_shape"
                    android:hint="@string/min_salary_field"
                    android:inputType="numberDecimal"
                    android:padding="15dp" />

                <TextView
                    android:id="@+id/minSalary_errorMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="5dp"
                    android:text=""
                    android:textColor="#FF0000"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/max_salary_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/max_salary_title"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/max_salary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rectangular_shape"
                    android:hint="@string/max_salary_field"
                    android:inputType="numberDecimal"
                    android:padding="15dp" />

                <TextView
                    android:id="@+id/maxSalary_errorMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="5dp"
                    android:text=""
                    android:textColor="#FF0000"
                    android:visibility="gone" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/bottomPart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#BEBEBE" />

            <Button
                android:id="@+id/add_job_btn"
                style="@style/margin_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:background="@drawable/filled_button"
                app:backgroundTint="@null"
                android:text="@string/add_job_btn"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>