<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EmpSetInterviewFragment">

        <LinearLayout
            android:id="@+id/topPart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/upButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp"
                    android:src="@drawable/ic_up_button"
                    app:tint="@color/theme" />

                <TextView
                    android:id="@+id/set_interview_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingVertical="10sp"
                    android:paddingEnd="35sp"
                    android:text="@string/set_interview_title"
                    android:textAlignment="center"
                    android:textColor="@color/theme"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#BEBEBE" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingVertical="10dp"
            android:background="#FFF"
            app:layout_constraintBottom_toTopOf="@id/bottomPart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topPart">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/interview_date_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/interview_date_title"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/interview_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rectangular_shape"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/interview_date_field"
                    android:padding="16dp"
                    android:text="" />

                <TextView
                    android:id="@+id/interview_time_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/interview_time_title"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/interview_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rectangular_shape"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/interview_time_field"
                    android:padding="16dp"
                    android:text="" />

                <TextView
                    android:id="@+id/interview_venue_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/interview_venue_title"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rectangular_shape">

                    <Spinner
                        android:id="@+id/interview_platform_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/interviewer_name_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/interviewer_name_title"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/interviewer_name_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/rectangular_shape"
                    android:hint="@string/interviewer_name_field"
                    android:inputType="text"
                    android:padding="15dp" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/bottomPart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#BEBEBE" />

            <Button
                android:id="@+id/send_invitation_btn"
                style="@style/margin_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:background="@drawable/filled_button"
                android:text="@string/send_invitation_btn"
                app:backgroundTint="@null" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>